# sigmatau

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
sigmatau/: main.py  schemas.py
src/sigmatau/: __init__.py  main.py
tests/: basic_test.py  sigma_test.py  tau_test.py
tests/kestrel/: helloworld.hf
tests/rules/tau/: win_alert_mimikatz_keywords.yml
